tests/paczka1/fuzzy1/14161458.err
Error in line 3: UPU A497 40,7
Error in line 7: GHA7 A531 314,7
Error in line 11: RDCfj723 A531 64,0
Error in line 10: GHA7 A497 47,2
Error in line 12: RDCfj723 A497 33,9
Error in line 25: wB1IuX S563 17,62
Error in line 24: wB1IuX S563 66,2
Error in line 19: GHA7 A591 57,1
